--- a/force-app/main/default/layouts/Opportunity-Opportunity Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Opportunity-Opportunity Layout.layout-meta.xml
@@ -31,7 +31,7 @@
                 <behavior>Edit</behavior>
                 <field>LeadSource</field>
             </layoutItems>
-            <layoutItems>
+<layoutItems>
                 <behavior>Edit</behavior>
                 <field>Profile__c</field>
             </layoutItems>
@@ -201,11 +201,11 @@
             <actionType>QuickAction</actionType>
             <sortOrder>8</sortOrder>
         </platformActionListItems>
-        <platformActionListItems>
+<!--platformActionListItems>
             <actionName>FeedItem.RypplePost</actionName>
             <actionType>QuickAction</actionType>
             <sortOrder>9</sortOrder>
-        </platformActionListItems>
+        </platformActionListItems-->
         <platformActionListItems>
             <actionName>FeedItem.LinkPost</actionName>
             <actionType>QuickAction</actionType>
@@ -339,9 +339,9 @@
         <quickActionListItems>
             <quickActionName>NewEvent</quickActionName>
         </quickActionListItems>
-        <quickActionListItems>
+<!--quickActionListItems>
             <quickActionName>FeedItem.RypplePost</quickActionName>
-        </quickActionListItems>
+        </quickActionListItems-->
         <quickActionListItems>
             <quickActionName>FeedItem.LinkPost</quickActionName>
         </quickActionListItems>
